# cfb27-lua-hook

./: .gitignore  README.md  franchise_helper.js  live_process.py  native_hook.py  package.json  server.py  test_editor.py
.github/workflows/: windows-ci.yml
.requirements/: 007-ceilings-progression-and-normalization-v2.md  008-ability-and-presentation-v3-v4.md  009-ceilings-progression-and-normalization-v2.md  010-ability-and-recruiting-presentation-v3-v4.md  README.md  fb-manifesto.md  progress.txt
.superpowers/sdd/: final-fix-4-report.md  frtk-endian-fix-report.md
docs/: cli.md  frtk-profile-format.md  frtk-table-api.md  getting-started.md  live-hook-research.md  lua-api.md  protocol.md  safety.md
docs/development/: building.md  release-checklist.md
docs/research/: runtime-verification.md
docs/superpowers/plans/: 2026-07-11-brooks-live-recruiting-calibration.md  2026-07-11-cursor-paged-private-memory-scan.md  2026-07-11-guarded-memory-transactions.md  2026-07-11-live-memory-discovery-telemetry.md  2026-07-12-live-frtk-table-catalog.md  2026-07-12-scan-authority-recovery.md  2026-07-14-board-membership-live-verification.md  2026-07-14-brooks-live-recruiting-import.md  2026-07-14-live-recruit-class-replacement.md  2026-07-15-board-mutation-api.md
docs/superpowers/specs/: 2026-07-11-cursor-paged-private-memory-scan-design.md  2026-07-11-live-recruiting-memory-bridge-design.md  2026-07-12-live-frtk-table-catalog-design.md  2026-07-12-scan-authority-recovery-design.md  2026-07-14-board-membership-live-verification-design.md  2026-07-14-brooks-live-recruiting-import-design.md
native/: CMakeLists.txt
native/host/: board_mutation.cpp  board_mutation.h  build_policy.cpp  build_policy.h  frtk_catalog.cpp  frtk_catalog.h  frtk_discovery.cpp  frtk_discovery.h  frtk_field_schema.cpp  frtk_field_schema.h  frtk_lua_api.cpp  frtk_lua_api.h  frtk_profile.cpp  frtk_profile.h  frtk_record_access.cpp  frtk_record_access.h  game_builds.cpp  game_builds.generated.h  game_builds.h  game_builds.json  lua_host.cpp  memory_reader.cpp  memory_reader.h  memory_transaction.cpp  memory_transaction.h  native_call.cpp  native_call.h  research_watch.cpp  research_watch.h  telemetry.cpp  telemetry.h
native/smoke/: board_mutation_smoke.cpp  build_policy_smoke.cpp  frtk_catalog_smoke.cpp  frtk_discovery_smoke.cpp  frtk_field_schema_smoke.cpp  frtk_lua_api_smoke.cpp  frtk_profile_smoke.cpp  frtk_record_access_smoke.cpp  game_builds_smoke.cpp  memory_reader_smoke.cpp  memory_transaction_smoke.cpp  native_call_smoke.cpp  protocol_smoke.cpp  research_watch_smoke.cpp  startup_host_smoke.cpp  telemetry_smoke.cpp
schema/: README.md
scripts/: autorun.lua  build-frtk-profile.cjs  game-build-manifest.cjs  package-release.cjs  promote-game-build.cjs
scripts/board-verification/: live-anchor.cjs  live-table-snapshot.cjs  reanchor-build.cjs  reanchor-evidence.cjs  reanchor-lib.cjs
static/: app.js  index.html  styles.css
tests/: board-reanchor-cli.test.cjs  board-reanchor-evidence.test.cjs  board-reanchor.test.cjs  closed-gate-policy.test.cjs  frtk-lua-source-policy.test.cjs  game-build-manifest.test.cjs  game-build-promotion.test.cjs  native-layout.test.cjs  package-layout.test.cjs  release-package.test.cjs
